<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_world_p109</name>
  <version>1.0.0</version>
  <description>Gazebo world of a P109 laboratory at polish WUT</description>
  <maintainer email="dan.gield@gmail.com">Daniel Giełdowski</maintainer>
  <license>Apache License 2.0</license>

  <author email="dan.gield@gmail.com">Daniel Giełdowski</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>

</package>
